feat(game): start the color game implementation

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
+    <!-- Add your site or application content here
     <div class="header">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -46,15 +46,10 @@
         </div>
       </div>
     </div>
+  -->
 
     <div class="container">
     <div ng-view=""></div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
     </div>
 
 
@@ -87,6 +82,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/game.js"></script>
         <!-- endbuild -->
 </body>
 </html>
